[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/DebugMenu/Overlay.gd" type="Script" id=1]

[node name="DebugMenuOverlay" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="LogColumn" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 958.0
margin_bottom = 1080.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="InputLabel" type="Label" parent="HBoxContainer/LogColumn"]
margin_right = 958.0
margin_bottom = 538.0
size_flags_vertical = 3
autowrap = true
clip_text = true

[node name="ValueLabel" type="Label" parent="HBoxContainer/LogColumn"]
margin_top = 542.0
margin_right = 958.0
margin_bottom = 1080.0
size_flags_vertical = 3
valign = 2
autowrap = true
clip_text = true

[node name="InfoColumn" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 962.0
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2
size_flags_horizontal = 3
